--- a/index.html
+++ b/index.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Text Printer</title>
+    <title>Dynamic Text Display</title>
 </head>
-
 <body>
-    <h1>Text Printer</h1>
     <div>
-        <?php $message = isset($_POST['message']) ? $_POST['message'] : 'Type something and press print!'; echo "<p>$message</p>"; ?>
+        <input type="text" id="textInput" placeholder="Enter text">
+        <button onclick="updateText()">Update Text</button>
     </div>
-    <form method="post" action=""> <label for="message">Enter your text:</label><br> <input type="text" id="message"
-            name="message"><br> <button type="submit">Print</button> </form>
-</body>
+    <div id="displayArea">
+        <!-- Text entered by the user will be displayed here -->
+    </div>
 
+    <script>
+        function updateText() {
+            // Get the value entered by the user
+            var newText = document.getElementById("textInput").value;
+
+            // Update the display area with the new text
+            document.getElementById("displayArea").innerText = newText;
+        }
+    </script>
+</body>
 </html>
